<resources>
    <string name="app_name">BasicApplication</string>
    <string name="app_business_trip_text">因公出差</string>
    <string name="app_hotel_text">酒店</string>

    <string name="app_change_english_text">切换成英文</string>

    <string name="app_change_chinese_text">切换成中文</string>

    <string name="app_auto_system_language_text">跟随系统</string>

    <!-- 本地登录演示 -->
    <string name="app_login_demo_entry_text">本地登录演示</string>
    <string name="app_login_title_text">本地登录演示</string>
    <string name="app_login_account_tab_text">账号密码登录</string>
    <string name="app_login_phone_tab_text">手机号登录</string>
    <string name="app_login_button_text">登 录</string>
    <string name="app_login_get_code_text">获取验证码</string>
    <string name="app_login_resend_code_text">%1$s 秒后重新获取</string>
    <string name="app_login_username_hint_text">用户名</string>
    <string name="app_login_password_hint_text">密码</string>
    <string name="app_login_phone_hint_text">手机号</string>
    <string name="app_login_code_hint_text">验证码</string>
    <string name="app_login_username_empty_text">请输入用户名</string>
    <string name="app_login_password_empty_text">请输入密码</string>
    <string name="app_login_phone_invalid_text">请输入正确的手机号</string>
    <string name="app_login_code_empty_text">请输入验证码</string>
    <string name="app_login_code_invalid_text">验证码格式不正确</string>
    <string name="app_login_success_text">登录成功</string>
    <string name="app_login_account_error_text">用户名或密码错误</string>
    <string name="app_login_phone_not_registered_text">该手机号未注册</string>
    <string name="app_login_code_error_text">验证码错误</string>
    <string name="app_login_code_sent_text">验证码已发送，请注意查收：%1$s</string>

</resources>